# vulkan-practice

./: Cargo.toml  compile_shaders.bat  compile_shaders.sh
shaders/spv/: shader-base.vert.spv  shader-texture.frag.spv  shader-texture.vert.spv  shader-uniform-buffer.vert.spv  shader-vertex-buffer.vert.spv
shaders/src/: shader-base.frag  shader-base.vert  shader-texture.frag  shader-texture.vert  shader-uniform-buffer.vert  shader-vertex-buffer.frag  shader-vertex-buffer.vert
src/: main.rs
src/utility/: constants.rs  debug.rs  fps_limiter.rs  mod.rs  platforms.rs  structures.rs  tools.rs  window.rs
src/utility/share/: mod.rs  v1.rs
