[package]
name = "vulkan_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.0"
ash = "0.34.0+1.2.203"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17.0"
cocoa = "0.18.4"
objc  = "0.2.5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }